--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
     <div class="container">
       <nav class="main-nav">
         <a href="index.html" class="logo">
-          <h1>Botudidingga</h1>
+          <h1>Botudidingga YES</h1>
         </a>
         <ul class="nav">
           <li><a href="index.html" class="active">Beranda</a></li>
